@@ -43,3 +43,6 @@ instrumentsdb.edit.rename = Rename...
 instrumentsdb.edit.rename.tt = Rename selected instrument or directory
 instrumentsdb.edit.description = Change Description...
 instrumentsdb.edit.description.tt = Edit description
+
+JSOrchestraPane.loadInstrument = Load Instrument
+JSOrchestraPane.mapInstrument = Add To MIDI Map
